new selector=css class

--- a/index.html
+++ b/index.html
@@ -71,19 +71,19 @@
             </div>
         </div>
         <template>
-            <li class="p-4" data-phl="item">
-                <div class="phl-display">
-                    <button data-phl="handle">
+            <li class="phl-item">
+                <div class="phl-element">
+                    <button class="phl-handle">
                         <div class="sr-only">Item Handle</div>
                     </button>
                     <div class="phl-label">Item Label</div>
-                    <button data-phl="extract">
+                    <button class="phl-extract">
                         <div class="sr-only">Extract inner list</div>
                     </button>
-                    <button data-phl="collapse">
+                    <button class="phl-collapse">
                         <div class="sr-only">Collapse inner list</div>
                     </button>
-                    <button data-phl="expand">
+                    <button class="phl-expand">
                         <div class="sr-only">Expand inner list</div>
                     </button>
                 </div>
