bundle for browser

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <link rel="icon" type="image/x-icon" href="/favicon.ico">
         <title>Example page of hierarchy-list</title>
+        <link rel="stylesheet" href="./src/style.css">
     </head>
     <body>
         <div class="w-full flex flex-col justify-center items-center p-4">
@@ -40,7 +41,7 @@
                 </div>
 
                 <ul
-                    class="shadow-lg rounded-md divide-y min-w-[300px] phl-list border"
+                    class="shadow-lg rounded-md min-w-[300px] phl-list border"
                     id="app2"
                 ></ul>
 
